# more-types-less-tests-code

./: LICENSE  README.md
java/: .gitignore  pom.xml
java/src/main/java/sbuch/presentation/examples/: DoorExample.java  DuckExample.java  TrafficLightExample.java
java/src/main/java/sbuch/presentation/examples/meeting/: MeetingExample.java
java/src/main/java/sbuch/presentation/examples/meeting/core/: CorporateContact.java  InPersonMeeting.java  Meeting.java  MeetingRoom.java  OnlineMeeting.java  ValidationResult.java  VideoPlatform.java
java/src/main/java/sbuch/presentation/examples/meeting/framework/: MeetingFramework.java  MeetingFrameworkDeserializer.java  MeetingRoomDeserializer.java  VideoPlatformDeserializer.java
java/src/test/java/sbuch/presentation/examples/meeting/: MeetingExampleTest.java
java/src/test/java/sbuch/presentation/examples/meeting/framework/: MeetingFrameworkDeserializerTest.java
python/: pyproject.toml  ruff.toml
python/.devcontainer/: devcontainer.json
python/src/examples/: door_example.py  duck_example.py  trafficlight.py
python/src/examples/meeting/: core.py  framework.py  meeting_example.py  test_framework.py  test_meeting_example.py
typescript/: .gitignore  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
typescript/src/: doorExample.ts  duckExample.ts  trafficLightExample.ts
typescript/src/meetingExample/: core.ts  framework.test.ts  framework.ts  meetingExample.test.ts  meetingExample.ts
